<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/lightGray">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                >

                <TextView
                    android:id="@+id/matchNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detailsMatchNumber"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/roundNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detailsRoundNumber"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/matchDateUtc"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/detailsDate"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/detailsLocation"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                >

                <TextView
                    android:id="@+id/homeTeam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detailsHomeTeam"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/awayTeam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detailsAwayTeam"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/group"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/detailsGroup"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                >

                <TextView
                    android:id="@+id/homeTeamScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detailsHomeTeamScore"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/awayTeamScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detailsAwayTeamScore"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
